#8 - vs.net migration
- change web apps target framework to 4.0
- compiles successful & tests pass now

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -7,4 +7,11 @@
   <repository path="../Routine.Test.Web.Mvc/packages.config" />
   <repository path="../Routine.Test/packages.config" />
   <repository path="../Routine.Windsor/packages.config" />
+  <repository path="..\Routine.Test.Business.Service\packages.config" />
+  <repository path="..\Routine.Test.Common.Configuration\packages.config" />
+  <repository path="..\Routine.Test.Common.Domain\packages.config" />
+  <repository path="..\Routine.Test.Performance\packages.config" />
+  <repository path="..\Routine.Test.Web.Mvc\packages.config" />
+  <repository path="..\Routine.Test\packages.config" />
+  <repository path="..\Routine.Windsor\packages.config" />
 </repositories>
