--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -39,6 +39,10 @@
     <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\ApiContext\DefaultApiContext.cs" />
+    <Compile Include="Api\IApiContext.cs" />
+    <Compile Include="Mvc\IMvcContext.cs" />
+    <Compile Include="Mvc\MvcContext\DefaultMvcContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Builder\CodingStyleBuilder.cs" />
     <Compile Include="Core\Builder\ExtractorBuilder.cs" />
@@ -73,8 +77,9 @@
     <Compile Include="Core\ISerializer.cs" />
     <Compile Include="Core\DomainObject.cs" />
     <Compile Include="Core\DomainType.cs" />
-    <Compile Include="IFactory.cs" />
     <Compile Include="ReflectionExtensions.cs" />
+    <Compile Include="Soa\ISoaContext.cs" />
+    <Compile Include="Soa\Context\DefaultSoaContext.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="Api\Rapplication.cs" />
     <Compile Include="Core\IObjectItem.cs" />
@@ -99,7 +104,7 @@
     <Compile Include="Mvc\Builder\MvcConfigurationBuilder.cs" />
     <Compile Include="BuildRoutine.cs" />
     <Compile Include="Core\ICoreContext.cs" />
-    <Compile Include="Core\CoreContext\CachedFactoryCoreContext.cs" />
+    <Compile Include="Core\CoreContext\CachedCoreContext.cs" />
     <Compile Include="IEnumerableExtensions.cs" />
     <Compile Include="Core\ICache.cs" />
     <Compile Include="Core\Cache\WebCache.cs" />
@@ -147,32 +152,19 @@
     <Compile Include="Mvc\MvcController.cs" />
     <Compile Include="Soa\ISoaConfiguration.cs" />
     <Compile Include="Soa\Builder\SoaConfigurationBuilder.cs" />
-    <Compile Include="Soa\SoaConfiguration\GenericSoaConfiguration.cs" />
+    <Compile Include="Soa\Configuration\GenericSoaConfiguration.cs" />
     <Compile Include="Soa\SoaController.cs" />
-    <Compile Include="Api\ObjectServiceRestClient.cs" />
-    <Compile Include="Api\ISoaClientConfiguration.cs" />
-    <Compile Include="Api\SoaClientConfiguration\GenericSoaClientConfiguration.cs" />
-    <Compile Include="Api\Builder\SoaClientConfigurationBuilder.cs" />
+    <Compile Include="Soa\RestClientObjectService.cs" />
+    <Compile Include="Soa\ISoaClientConfiguration.cs" />
+    <Compile Include="Soa\Configuration\GenericSoaClientConfiguration.cs" />
+    <Compile Include="Soa\Builder\SoaClientConfigurationBuilder.cs" />
     <Compile Include="Core\Rest\WebRequestRestClient.cs" />
     <Compile Include="Api\Generator\ClientApiGenerator.cs" />
     <Compile Include="Api\Generator\ModuleFilter.cs" />
     <Compile Include="Api\Generator\ClientApiPatterns.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Folder Include="Api\" />
-    <Folder Include="Soa\" />
-    <Folder Include="Core\CoreContext\" />
-    <Folder Include="Core\Cache\" />
-    <Folder Include="Core\Reflection\Optimization\" />
-    <Folder Include="Core\Rest\" />
-    <Folder Include="Soa\Builder\" />
-    <Folder Include="Soa\SoaConfiguration\" />
-    <Folder Include="Api\Builder\" />
-    <Folder Include="Api\SoaClientConfiguration\" />
-    <Folder Include="Api\Generator\" />
-    <Folder Include="Api\Generator\Client\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Api\Generator\Client\ApiCodeModel.cs.template" />
     <EmbeddedResource Include="Api\Generator\Client\ObjectCodeModel.cs.template" />
