--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -39,17 +39,17 @@
     <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\ApiContext\DefaultApiContext.cs" />
+    <Compile Include="Api\Context\DefaultApiContext.cs" />
     <Compile Include="Api\IApiContext.cs" />
     <Compile Include="Mvc\IMvcContext.cs" />
-    <Compile Include="Mvc\MvcContext\DefaultMvcContext.cs" />
+    <Compile Include="Mvc\Context\DefaultMvcContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Builder\CodingStyleBuilder.cs" />
     <Compile Include="Core\Builder\ExtractorBuilder.cs" />
     <Compile Include="Core\Builder\LocatorBuilder.cs" />
     <Compile Include="Core\Builder\SelectorBuilder.cs" />
     <Compile Include="Core\Builder\SerializerBuilder.cs" />
-    <Compile Include="Core\CodingStyle\GenericCodingStyle.cs" />
+    <Compile Include="Core\Configuration\GenericCodingStyle.cs" />
     <Compile Include="Core\Extractor\BaseOptionalExtractor.cs" />
     <Compile Include="Core\Extractor\ConverterExtractor.cs" />
     <Compile Include="Core\Extractor\MultipleExtractor.cs" />
@@ -100,11 +100,11 @@
     <Compile Include="Mvc\MemberViewModel.cs" />
     <Compile Include="Mvc\ParameterViewModel.cs" />
     <Compile Include="Mvc\IMvcConfiguration.cs" />
-    <Compile Include="Mvc\MvcConfiguration\GenericMvcConfiguration.cs" />
+    <Compile Include="Mvc\Configuration\GenericMvcConfiguration.cs" />
     <Compile Include="Mvc\Builder\MvcConfigurationBuilder.cs" />
     <Compile Include="BuildRoutine.cs" />
     <Compile Include="Core\ICoreContext.cs" />
-    <Compile Include="Core\CoreContext\CachedCoreContext.cs" />
+    <Compile Include="Core\Context\CachedCoreContext.cs" />
     <Compile Include="IEnumerableExtensions.cs" />
     <Compile Include="Core\ICache.cs" />
     <Compile Include="Core\Cache\WebCache.cs" />
