#9 - Windsor completely removed
ContextBuilder added to help override default ICache & IRestClient implementations

--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Api\Context\DefaultApiContext.cs" />
     <Compile Include="Api\IApiContext.cs" />
+    <Compile Include="ContextBuilder.cs" />
     <Compile Include="Mvc\IMvcContext.cs" />
     <Compile Include="Mvc\Context\DefaultMvcContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
