--- a/Routine.Test.Web.Mvc/Web.config
+++ b/Routine.Test.Web.Mvc/Web.config
@@ -14,7 +14,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         affects performance, set this value to true only 
         during development.
     -->
-    <compilation defaultLanguage="C#" debug="false" targetFramework="4.0">
+    <compilation defaultLanguage="C#" debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
         <add assembly="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
@@ -25,7 +25,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         <add assembly="System.Web.DynamicData, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
         <add assembly="System.ComponentModel.DataAnnotations, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
         <add assembly="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
-        <add assembly="Mono.Data.Sqlite, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756"/>
+        <!--<add assembly="Mono.Data.Sqlite, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756"/>-->
       </assemblies>
     </compilation>
     <customErrors mode="RemoteOnly"/>
