#8 - Business Service now works on windows

--- a/Routine.Test.Business.Service/Web.config
+++ b/Routine.Test.Business.Service/Web.config
@@ -14,7 +14,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         affects performance, set this value to true only 
         during development.
     -->
-    <compilation defaultLanguage="C#" debug="false" targetFramework="4.0">
+    <compilation defaultLanguage="C#" debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
         <add assembly="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
