--- a/Routine.Test.Web.Mvc/Routine.Test.Web.Mvc.csproj
+++ b/Routine.Test.Web.Mvc/Routine.Test.Web.Mvc.csproj
@@ -124,10 +124,10 @@
     <Content Include="Views\Mvc\Member-Table.ascx" />
     <Content Include="Views\Mvc\Page.aspx" />
     <Content Include="x64\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="x86\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <PropertyGroup>
