#9 - Missing files committed

--- a/Routine.Test.Module.Todo/Routine.Test.Module.Todo.csproj
+++ b/Routine.Test.Module.Todo/Routine.Test.Module.Todo.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -45,6 +45,10 @@
     <ProjectReference Include="..\Routine.Test.Common.Domain\Routine.Test.Common.Domain.csproj">
       <Project>{F9A92862-60E2-4C10-A74A-1B3FEE558035}</Project>
       <Name>Routine.Test.Common.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Routine.Test.Common\Routine.Test.Common.csproj">
+      <Project>{0a8536e8-84a1-4d0d-8af3-34785725e56b}</Project>
+      <Name>Routine.Test.Common</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
