--- a/Routine.Test.Module.Todo/Routine.Test.Module.Todo.csproj
+++ b/Routine.Test.Module.Todo/Routine.Test.Module.Todo.csproj
@@ -50,5 +50,9 @@
       <Project>{0a8536e8-84a1-4d0d-8af3-34785725e56b}</Project>
       <Name>Routine.Test.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Routine\Routine.csproj">
+      <Project>{a597022c-f6dd-495f-a846-290eede08b9d}</Project>
+      <Name>Routine</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
