--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -165,7 +165,9 @@
     <Compile Include="Api\Generator\ClientApiPatterns.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Soa\View\SoaTestPage.html" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Api\Generator\Client\ApiCodeModel.cs.template" />
     <EmbeddedResource Include="Api\Generator\Client\ObjectCodeModel.cs.template" />
