--- a/Routine.Test.Business.Service/Routine.Test.Business.Service.csproj
+++ b/Routine.Test.Business.Service/Routine.Test.Business.Service.csproj
@@ -86,6 +86,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
     <MonoDevelop>
       <Properties VerifyCodeBehindFields="True" VerifyCodeBehindEvents="True">
@@ -112,7 +113,7 @@
   </ProjectExtensions>
   <ItemGroup>
     <ProjectReference Include="..\Routine.Test.Module.ProjectManagement\Routine.Test.Module.ProjectManagement.csproj">
-      <Project>{c6a4e7a1-6552-4d3c-a04d-385c869bb5f2}</Project>
+      <Project>{C6A4E7A1-6552-4D3C-A04D-385C869BB5F2}</Project>
       <Name>Routine.Test.Module.ProjectManagement</Name>
     </ProjectReference>
     <ProjectReference Include="..\Routine\Routine.csproj">
