#8 - nuget push scripts added (currently to a local nuget server)
- migration backup files deleted

--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -172,4 +172,7 @@
     <EmbeddedResource Include="Api\Generator\Client\ObjectCodeModel.cs.template" />
     <EmbeddedResource Include="Soa\View\SoaTestPage.html" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Routine.nuspec" />
+  </ItemGroup>
 </Project>
