--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Core\Interceptor\BaseSingleInterceptorTest.cs" />
     <Compile Include="Core\Interceptor\DecoratorInterceptorTest.cs" />
     <Compile Include="Core\Interceptor\GenericInterceptorTest.cs" />
+    <Compile Include="Core\Interceptor\InterceptionContextTest.cs" />
     <Compile Include="Core\Interceptor\InterceptionTest.cs" />
     <Compile Include="Core\Interceptor\InterceptorTestBase.cs" />
     <Compile Include="Core\Interceptor\MultipleInterceptorTest.cs" />
