--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Api\Generator\ClientApiGenerator.cs" />
     <Compile Include="Api\Generator\ModuleFilter.cs" />
     <Compile Include="Api\Generator\ClientApiPatterns.cs" />
+    <Compile Include="Mvc\Context\PerformInterceptionContext.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
