#9 - interception design change
- before, after/error is changed to before, succes/fail, after
- all soa interceptors are bound
- common interceptor pattern is added to soa patterns
- test project session is changed from perwebrequest to scoped

--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Core\DomainType.cs" />
     <Compile Include="ReflectionExtensions.cs" />
     <Compile Include="SoaPatterns.cs" />
+    <Compile Include="Soa\Context\MemberInterceptionContext.cs" />
+    <Compile Include="Soa\Context\ObjectModelInterceptionContext.cs" />
+    <Compile Include="Soa\Context\ObjectReferenceInterceptionContext.cs" />
+    <Compile Include="Soa\Context\OperationInterceptionContext.cs" />
     <Compile Include="Soa\Context\PerformOperationInterceptionContext.cs" />
     <Compile Include="Soa\ISoaContext.cs" />
     <Compile Include="Soa\Context\DefaultSoaContext.cs" />
