#9 - attribute support for reflection library
- auto mark pattern added
- interception behaviour is changed to a chain interceptor behaviour

--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -44,12 +44,14 @@
     <Compile Include="ContextBuilder.cs" />
     <Compile Include="Core\Builder\InterceptorBuilder.cs" />
     <Compile Include="Core\IInterceptor.cs" />
-    <Compile Include="Core\Interceptor\BaseSingleInterceptor.cs" />
-    <Compile Include="Core\Interceptor\GenericInterceptor.cs" />
-    <Compile Include="Core\Interceptor\Interception.cs" />
-    <Compile Include="Core\Interceptor\InterceptionFactory.cs" />
-    <Compile Include="Core\Interceptor\MultipleInterceptor.cs" />
+    <Compile Include="Core\Interceptor\BaseAroundInterceptor.cs" />
+    <Compile Include="Core\Interceptor\Chain\AdapterChainLinkInterceptor.cs" />
+    <Compile Include="Core\Interceptor\Chain\LastChainLinkInterceptor.cs" />
+    <Compile Include="Core\Interceptor\AroundInterceptor.cs" />
+    <Compile Include="Core\Interceptor\Chain\IChainLinkInterceptor.cs" />
+    <Compile Include="Core\Interceptor\ChainInterceptor.cs" />
     <Compile Include="Core\Interceptor\DecoratorInterceptor.cs" />
+    <Compile Include="Core\Interceptor\AdapterInterceptor.cs" />
     <Compile Include="Core\Marks.cs" />
     <Compile Include="SoaClientPatterns.cs" />
     <Compile Include="Mvc\IMvcContext.cs" />
