--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -40,13 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Interceptor\BaseSingleInterceptorTest.cs" />
+    <Compile Include="Core\Interceptor\AdapterInterceptorTest.cs" />
+    <Compile Include="Core\Interceptor\BaseAroundInterceptorTest.cs" />
     <Compile Include="Core\Interceptor\DecoratorInterceptorTest.cs" />
-    <Compile Include="Core\Interceptor\GenericInterceptorTest.cs" />
+    <Compile Include="Core\Interceptor\AroundInterceptorTest.cs" />
     <Compile Include="Core\Interceptor\InterceptionContextTest.cs" />
-    <Compile Include="Core\Interceptor\InterceptionTest.cs" />
     <Compile Include="Core\Interceptor\InterceptorTestBase.cs" />
-    <Compile Include="Core\Interceptor\MultipleInterceptorTest.cs" />
+    <Compile Include="Core\Interceptor\ChainInterceptorTest.cs" />
     <Compile Include="Core\Reflection\Optimization\ReflectionMethodInvokerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Extractor\BaseOptionalExtractorTest.cs" />
