--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Core\Interceptor\InterceptorTestBase.cs" />
     <Compile Include="Core\Interceptor\ChainInterceptorTest.cs" />
     <Compile Include="Core\Reflection\Optimization\ReflectionMethodInvokerTest.cs" />
-    <Compile Include="Core\Service\SerializationExtensionsTest.cs" />
+    <Compile Include="Soa\SerializationExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Extractor\BaseOptionalExtractorTest.cs" />
     <Compile Include="Core\Extractor\ConverterExtractorTest.cs" />
@@ -72,13 +72,13 @@
     <Compile Include="EnumerableExtensionsTest.cs" />
     <Compile Include="Soa\SoaControllerTest.cs" />
     <Compile Include="Core\Selector\NoneSelectorTest.cs" />
-    <Compile Include="Core\Service\ObjectServiceTest.cs" />
-    <Compile Include="Core\Service\ObjectServiceTest_DataToStringAndEquals.cs" />
-    <Compile Include="Core\Service\ObjectServiceTest_GetApplicationModel.cs" />
-    <Compile Include="Core\Service\ObjectServiceTest_GetObjectData.cs" />
-    <Compile Include="Core\Service\ObjectServiceTest_GetObjectModel.cs" />
-    <Compile Include="Core\Service\ObjectServiceTest_PerformOperation.cs" />
-    <Compile Include="Core\Service\ObjectServiceTestBase.cs" />
+    <Compile Include="Core\ObjectServiceTest.cs" />
+    <Compile Include="Core\ObjectServiceTest_DataToStringAndEquals.cs" />
+    <Compile Include="Core\ObjectServiceTest_GetApplicationModel.cs" />
+    <Compile Include="Core\ObjectServiceTest_GetObjectData.cs" />
+    <Compile Include="Core\ObjectServiceTest_GetObjectModel.cs" />
+    <Compile Include="Core\ObjectServiceTest_PerformOperation.cs" />
+    <Compile Include="Core\ObjectServiceTestBase.cs" />
     <Compile Include="Core\Reflection\TypeInfoTest.cs" />
     <Compile Include="Core\Reflection\PropertyInfoTest.cs" />
     <Compile Include="Core\Reflection\MethodInfoTest.cs" />
@@ -87,8 +87,7 @@
     <Compile Include="ReflectionExtensionsTest.cs" />
     <Compile Include="Core\CoreTestBase.cs" />
     <Compile Include="Core\Reflection\Optimization\ReflectionOptimizerTest.cs" />
-    <Compile Include="Api\ObjectServiceRestClientTest.cs" />
-    <Compile Include="Api\Generator\ClientApiGeneratorTest.cs" />
+    <Compile Include="Api\Generator\ApiGeneratorTest.cs" />
     <Compile Include="Api\Generator\ModuleFilterTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
