--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\InterceptedObjectServiceTest.cs" />
     <Compile Include="Core\Interceptor\AdapterInterceptorTest.cs" />
     <Compile Include="Core\Interceptor\BaseAroundInterceptorTest.cs" />
     <Compile Include="Core\Interceptor\DecoratorInterceptorTest.cs" />
