--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,9 @@
   <repository path="../Routine.Test.Domain.Configuration/packages.config" />
   <repository path="../Routine.Test.Performance/packages.config" />
   <repository path="../Routine.Test/packages.config" />
+  <repository path="..\Routine.Test.Business.Service\packages.config" />
+  <repository path="..\Routine.Test.Domain.Configuration\packages.config" />
+  <repository path="..\Routine.Test.Domain\packages.config" />
+  <repository path="..\Routine.Test.Performance\packages.config" />
+  <repository path="..\Routine.Test\packages.config" />
 </repositories>
